// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Questions components > if QuestionList renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col items-center gap-3 list-none "
      >
        <div
          class="mt-[8px] w-full md:w-[70%] text-center text-gray-500 bg-[#151A30] p-3 border border-gray-700 rounded-full text-[20px] hover:cursor-pointer hover:bg-[#281A39] hover:text-gray-200"
        >
          1787
        </div>
        <div
          class="mt-[8px] w-full md:w-[70%] text-center text-gray-500 bg-[#151A30] p-3 border border-gray-700 rounded-full text-[20px] hover:cursor-pointer hover:bg-[#281A39] hover:text-gray-200"
        >
          1776
        </div>
        <div
          class="mt-[8px] w-full md:w-[70%] text-center text-gray-500 bg-[#151A30] p-3 border border-gray-700 rounded-full text-[20px] hover:cursor-pointer hover:bg-[#281A39] hover:text-gray-200"
        >
          1774
        </div>
        <div
          class="mt-[8px] w-full md:w-[70%] text-center text-gray-500 bg-[#151A30] p-3 border border-gray-700 rounded-full text-[20px] hover:cursor-pointer hover:bg-[#281A39] hover:text-gray-200"
        >
          1826
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col items-center gap-3 list-none "
    >
      <div
        class="mt-[8px] w-full md:w-[70%] text-center text-gray-500 bg-[#151A30] p-3 border border-gray-700 rounded-full text-[20px] hover:cursor-pointer hover:bg-[#281A39] hover:text-gray-200"
      >
        1787
      </div>
      <div
        class="mt-[8px] w-full md:w-[70%] text-center text-gray-500 bg-[#151A30] p-3 border border-gray-700 rounded-full text-[20px] hover:cursor-pointer hover:bg-[#281A39] hover:text-gray-200"
      >
        1776
      </div>
      <div
        class="mt-[8px] w-full md:w-[70%] text-center text-gray-500 bg-[#151A30] p-3 border border-gray-700 rounded-full text-[20px] hover:cursor-pointer hover:bg-[#281A39] hover:text-gray-200"
      >
        1774
      </div>
      <div
        class="mt-[8px] w-full md:w-[70%] text-center text-gray-500 bg-[#151A30] p-3 border border-gray-700 rounded-full text-[20px] hover:cursor-pointer hover:bg-[#281A39] hover:text-gray-200"
      >
        1826
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Questions components > testing if QuestionCard is rendered 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mt-[8px] w-full md:w-[70%] text-center text-gray-500 bg-[#151A30] p-3 border border-gray-700 rounded-full text-[20px] hover:cursor-pointer hover:bg-[#281A39] hover:text-gray-200"
      >
        New York City
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mt-[8px] w-full md:w-[70%] text-center text-gray-500 bg-[#151A30] p-3 border border-gray-700 rounded-full text-[20px] hover:cursor-pointer hover:bg-[#281A39] hover:text-gray-200"
    >
      New York City
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
